# GreedyMini

./: .gitignore  CMakeLists.txt  Makefile  Minimizers.cpp  Minimizers.h  Minimizers.vcxproj  Minimizers.vcxproj.filters  README.md  config.h  density_and_gc.cpp  preprocess.ipynb  runs.cpp  runs.h  tests.cpp  tools.cpp  tools.h
.github/workflows/: main.yml
code/: .gitignore  CMakeLists.txt  Minimizers.cpp  Minimizers.h  config.h  density_and_gc.cpp  density_and_gc.h  functions.cpp  functions.h  preprocess_particular.cpp  runs.cpp  runs.h  sampling_runtimes.cpp  sampling_runtimes.h  swapper.cpp  swapper.h  tests.cpp  tests.h  tools.cpp  tools.h
github figures/: .gitignore
minimizer loading example/: .gitignore  load_order.ipynb  w16_k9.gm  w20_k12.gm  w25_k12.gm
plots/: edit_lots.ipynb  final_graphs.ipynb  graph.ipynb
plots/scripts/: plots.py
scripts to check runtime and memory usage/: analyze_log_file.ipynb  test_memory_and_runtime.sh  test_memory_and_runtime_particular_v2.sh
scripts to run other methods/: final_scripts.sh  final_scripts_specific.sh
various scripts/measure runtime and mmu/: .gitignore  analyze_log_file.ipynb  test_memory_and_runtime.sh  test_memory_and_runtime_particular.sh  test_memory_and_runtime_particular_v2.sh
various scripts/measuring density on a random string/: .gitignore  NOTE.txt  gm_paper_comparisons.ipynb  mm_gm_paper_comparisons.ipynb
various scripts/plots/: density_time.ipynb  final_graphs.ipynb  plot_density_differences.ipynb  plot_sampling_times.ipynb  plot_specific_pairs.ipynb  swap_comparison.ipynb
(+5 files in other folders)
